Test/errors/err_temp_field_return.cb
// Returning an owning field extracted from an `alias` (borrow) by-value temp must be rejected: a
// borrow accessor's temp does not own the field buffer (the list still owns it), so returning a
// shallow copy dangles/double-frees. The fix is '.copy()'. A `move`/plain OWNING return instead
// does an implied move out of the return (Phase B) - see test_collection_leaks.cb. (Under the
// three-form model a plain non-move return is OWNING; only `alias` is a borrow.)
import "string.cb";
import "list.cb";

struct Tok { string text = default; };

expect_error("taken from a temporary") {
    string getName(list<Tok> toks) { return toks.get(0).text; }   // REJECTED - field of an alias borrow
}

extern int main() { return 0; }
